cloud/k3s/backend/wetty/components.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wetty
spec:
  selector:
    matchLabels:
      app: wetty
  template:
    metadata:
      labels:
        app: wetty
    spec:
      volumes:
      - name: wetty-docker-persistent-storage
        persistentVolumeClaim:
          claimName: wetty-docker-pv-claim
      - name: wetty-store-persistent-storage
        persistentVolumeClaim:
          claimName: wetty-store-pv-claim
      containers:
      - image: ghcr.io/jobscale/wetty
        name: wetty
        securityContext:
          privileged: true
        volumeMounts:
        - name: wetty-docker-persistent-storage
          mountPath: /var/lib/docker
        - name: wetty-store-persistent-storage
          mountPath: /home/store
---
apiVersion: v1
kind: Service
metadata:
  name: wetty
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: wetty
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wetty
  labels:
    name: wetty
spec:
  ingressClassName: nginx
  tls:
  - secretName: jsxjp-tls
    hosts: ["wetty.jsx.jp", "wetty.x.jsx.jp"]
  rules:
  - host: wetty.jsx.jp
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: wetty
            port:
              number: 80
  - host: wetty.x.jsx.jp
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: wetty
            port:
              number: 80
